compiler/src/test/resources/amyc/nameAnalyzer/passing/DefOrder.amy
object DefOrder
  fn bar(): Foo = { foo() }
  fn foo(): Foo = { Bar(42) }
  case class Bar(i: Int) : Foo
  abstract class Foo
end DefOrder
