compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedTypeInModuleA.amy
object Foo
  fn foo(): Bar.Baz = { 42 }
end Foo
